Cherry pick TeachingBubble/Coachmark: Fix TeachingBubble content wrapping to next line unnecessarily (#5121) 72bab3c4bd2deb739b3c98c7be0bd8ae75c2d313

--- a/packages/office-ui-fabric-react/src/components/TeachingBubble/TeachingBubble.scss
+++ b/packages/office-ui-fabric-react/src/components/TeachingBubble/TeachingBubble.scss
@@ -60,6 +60,7 @@
   max-width: 364px;
   border: 0;
   box-shadow: none !important;
+  width: calc(100% + 1px);
 
   animation-name: (bounceAnimation, opacityFadeIn);
   animation-duration: 2000ms;
